# uv

./: readme.md
chainlit_uv/: .env  pyproject.toml
chainlit_uv/src/chainlit_uv/: __init__.py  chatbot.py
